--- a/wp-content/themes/dw/public/css/style.css
+++ b/wp-content/themes/dw/public/css/style.css
@@ -51,3 +51,36 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+.hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
+
+.nav {
+  background-color: lightgray;
+  padding: 15px 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav__container {
+  display: flex;
+  justify-content: space-between;
+  min-width: 600px;
+}
+
+.nav a {
+  text-decoration: none;
+  color: rebeccapurple;
+}
+
+.nav__subcontainer {
+  display: none;
+}
